Impresión de etiquetas solo en Chrome definición del alto, Reporte de presupuesto de compras

--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -25,6 +25,9 @@
           <li [routerLink]="'/ajustes-inventario'" routerLinkActive="active" class="submenu-item">
             Ajustes inventario <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
           </li>
+          <li [routerLink]="'/reporte-presupuesto'" routerLinkActive="active" class="submenu-item">
+            Presupuesto compras <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
+          </li>
         </ul>
       </li>
 
