Exportar a excel en Surtir farmacia y en Reporte presupuesto

--- a/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
+++ b/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
@@ -10,6 +10,12 @@
                 <input type="text" formControlName="codigoBarras" style="width: 10rem;">
             </div>
             <div class="edit-seccion">
+                <label>Renglón 1:</label>
+                <input type="text" formControlName="renglon1" style="width: 22rem;">
+                <label>Renglón 2:</label>
+                <input type="text" formControlName="renglon2" style="width: 22rem;">
+            </div>
+            <div class="edit-seccion">
                 <label>Categoría:</label>
                 <input type="text" formControlName="categoria" style="width: 11rem;">
                 <label>Stock Minimo:</label>
