--- a/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
+++ b/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
@@ -415,6 +415,15 @@
                         <input type="text" formControlName="nombre" #firstInput class="form-control" />
                     </div>
 
+                    <div class="col-6">
+                        <label>Renglón 1</label>
+                        <input type="text" formControlName="renglon1" class="form-control" />
+                    </div>
+                    <div class="col-6">
+                        <label>Renglón 2</label>
+                        <input type="text" formControlName="renglon2" class="form-control" />
+                    </div>
+
                     <div class="col-3">
                         <label>Código de barras *</label>
                         <input type="text" formControlName="codigoBarras" class="form-control" />
