--- a/frontFarm/src/app/impresiones/ticket-header/ticket-header.component.html
+++ b/frontFarm/src/app/impresiones/ticket-header/ticket-header.component.html
@@ -1,9 +1,9 @@
 <div class="lineBottom">
   <div class="encabezado-flex">
-    <img src="assets/images/farmBienIcon.png" alt="Logo" class="logo logo-ticket"/>
+    <img [src]="imagen" alt="Logo" class="logo logo-ticket"/>
     <div>
-      <span style="font-size: large;">FARMACIAS DEL BIENESTAR</span><br />
-      <span style="font-size: large; margin-left: 70px;">PARA TODOS</span>
+      <span style="font-size: large;">{{ titulo1 }}</span><br />
+      <span style="font-size: large; margin-left: 70px;">{{ titulo2 }}</span>
     </div>
   </div>
 
