--- a/frontFarm/src/app/impresiones/ticket-header/ticket-header.component.css
+++ b/frontFarm/src/app/impresiones/ticket-header/ticket-header.component.css
@@ -1,13 +1,25 @@
 .encabezado-flex {
   display: flex;
   align-items: center; /* centra verticalmente */
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
 }
 
 .logo {
   width: 40px;
   height: auto;
-  margin-right: 30px;
+  margin-right: 12px;
+  flex: 0 0 40px; 
+}
+
+/* El bloque de títulos ocupa todo el resto y va centrado */
+.title-wrap {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+/* Evita usar margin-left “mágicos” */
+.title-line {
+  font-size: large;
 }
 
 .datos-farmacia {
