Disk en render para guardar imagenes

--- a/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.html
+++ b/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.html
@@ -3,7 +3,10 @@
   <app-ticket-header
     [nombreFarmacia]="datosCorte.nomFarm"
     [direccion]="datosCorte.dirFarm"
-    [telefono]="datosCorte.telFarm">
+    [telefono]="datosCorte.telFarm"
+    [imagen]="datosCorte.imgFarm"
+    [titulo1]="datosCorte.ti1Farm"
+    [titulo2]="datosCorte.ti2Farm">
   </app-ticket-header>
 
   <div class="corte-caja-encabezado">
