--- a/frontFarm/src/app/impresiones/venta-ticket/venta-ticket.component.html
+++ b/frontFarm/src/app/impresiones/venta-ticket/venta-ticket.component.html
@@ -1,4 +1,4 @@
-<div class="ticket-impresion" style="font-family: Roboto Condensed, Arial, sans-serif;">
+<div id="ticketVenta" class="ticket-impresion" style="font-family: Roboto Condensed, Arial, sans-serif;">
 
   <!-- Encabezado -->
   <app-ticket-header
