Impresión de logos en los tickets

--- a/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.html
+++ b/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.html
@@ -1,5 +1,5 @@
 <!-- corte-caja-ticket.component.html -->
-<div class="ticket-corteCaja">
+<div class="ticket-corteCaja" style="font-family: Roboto Condensed, Arial, sans-serif;">
   <app-ticket-header
     [nombreFarmacia]="datosCorte.nomFarm"
     [direccion]="datosCorte.dirFarm"
