--- a/frontFarm/src/app/impresiones/devolucion-ticket/devolucion-ticket.component.html
+++ b/frontFarm/src/app/impresiones/devolucion-ticket/devolucion-ticket.component.html
@@ -1,5 +1,5 @@
 <!-- devolucion-ticket.component.html -->
-<div class="ticket-impresion" *ngIf="venta">
+<div class="ticket-impresion" style="font-family: Roboto Condensed, Arial, sans-serif;" *ngIf="venta">
 
     <app-ticket-header
         [nombreFarmacia]="venta.farmacia.nombre"
