--- a/frontFarm/src/app/pages/pedidos/pedidos.component.html
+++ b/frontFarm/src/app/pages/pedidos/pedidos.component.html
@@ -184,8 +184,13 @@
     </p>
 </div>
 
-<app-pedido-ticket
-  *ngIf="paraImpresion && mostrarTicket"
-  [pedido]="paraImpresion"
-  class="ticket-impresion">
-</app-pedido-ticket>
+
+<ng-container >
+  <div *ngIf="mostrarTicket && paraImpresion as data"
+    id="ticketPedido"
+    #ticketPedidoRef
+    class="ticket-impresion"
+  >
+    <app-pedido-ticket [pedido]="data"></app-pedido-ticket>
+  </div>
+</ng-container>
